--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,10 @@ a:hover {
   }
 }
 /* titles */
+.section-title {
+  margin: 1rem 0 4rem;
+  font-size: 2rem;
+}
 .pre-title {
   text-transform: uppercase;
   letter-spacing: 0.5rem;
@@ -77,6 +81,12 @@ a:hover {
   display: block;
   left: 0;
   top: 50%;
+}
+/* layout */
+.grid-3 {
+  display: flex;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 3rem;
 }
 /* LOGO AND NAVIGATION MENU */
 .nav {
@@ -150,7 +160,7 @@ nav ul li a {
   margin: 0.5rem 0 1rem;
 }
 .hero-name span {
-  color: rgb(232, 169, 74);
+  color: rgba(213, 166, 65, 0.956);
 }
 
 .hero-right {
@@ -159,4 +169,28 @@ nav ul li a {
   background-color: rgb(63, 78, 78);
   border-radius: 20px;
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.25);
+}
+/* services section */
+.services {
+  background-color: rgba(63, 78, 78);
+  padding: 5rem 0;
+}
+.services .pre-title {
+  margin: 0;
+}
+.services-title {
+  color: #ffffff;
+  text-align: center;
+}
+.service {
+  margin-left: 100px;
+  margin-right: 20px;
+  text-align: center;
+  background: #dddd;
+  border-radius: 20px;
+  min-width: 250px;
+  max-width: 30%;
+  margin: 20px;
+  padding: 20px;
+  box-sizing: border-box;
 }
