--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,8 @@ a:hover {
 /* layout */
 .grid-3 {
   display: flex;
+  justify-content: center;
+  align-items: center;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 3rem;
 }
@@ -183,14 +185,14 @@ nav ul li a {
   text-align: center;
 }
 .service {
-  margin-left: 100px;
-  margin-right: 20px;
+  background-color: #dddd;
+  padding: 40px;
+  border-radius: 15px;
+  max-width: 600px;
   text-align: center;
-  background: #dddd;
-  border-radius: 20px;
-  min-width: 250px;
-  max-width: 30%;
-  margin: 20px;
-  padding: 20px;
-  box-sizing: border-box;
+}
+.service p {
+  font-size: 1em;
+  line-height: 1.5;
+  margin-bottom: 10px;
 }
