--- a/css/style.css
+++ b/css/style.css
@@ -51,11 +51,12 @@ a:hover {
   margin: 0 auto;
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 768px) {
   .container {
     width: 90%;
   }
 }
+
 /* titles */
 .section-title {
   margin: 1rem 0 4rem;
@@ -186,13 +187,89 @@ nav ul li a {
 }
 .service {
   background-color: #dddd;
-  padding: 40px;
+  padding: 40px 40px;
   border-radius: 15px;
   max-width: 600px;
   text-align: center;
+  width: 100%;
 }
 .service p {
   font-size: 1em;
   line-height: 1.5;
   margin-bottom: 10px;
+}
+/* portofolio */
+.skils {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 30px;
+}
+.skill {
+  background-color: #ffffff;
+  margin: 70px;
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+  width: 150px;
+  height: 150px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.skill img {
+  max-width: 100%;
+  max-height: 100%;
+}
+.judul {
+  text-align: center;
+}
+.judul-portfolio {
+  margin-left: 20px;
+  padding: 10px;
+  color: #000000;
+}
+/* hobbby */
+.judul-hobbys {
+  padding: 10px;
+  text-align: center;
+}
+.hobby-container {
+  padding: 5rem 0;
+  display: flex;
+  gap: 16rem;
+  background-color: #dddd;
+}
+.foto1 {
+  border: 2px solid black;
+  border-radius: 0.5rem;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: baseline;
+  justify-content: left;
+  cursor: pointer;
+  margin-left: 20px;
+}
+.foto1 h3 {
+}
+.foto2 {
+  border: 2px solid black;
+  border-radius: 0.5rem;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: baseline;
+  justify-content: left;
+  cursor: pointer;
+}
+.foto3 {
+  border: 2px solid black;
+  border-radius: 0.5rem;
+  padding: px;
+  display: flex;
+  flex-direction: column;
+  align-items: baseline;
+  justify-content: left;
+  cursor: pointer;
 }
