--- a/css/style.css
+++ b/css/style.css
@@ -134,17 +134,23 @@ a:hover {
     align-items: center;
   }
   .hero-right {
-    visibility: hidden;
     background-color: #000000;
-    /* width: 250px;
-    height: auto; */
+    width: 250px;
+    height: auto;
   }
-  .hero-name {
-    width: auto;
+  .hero-right img {
+    /* display: grid;
+ justify-content: ; */
   }
-  .hero-left {
-    position: absolute;
-    left: 20px;
+  .hero-name h1 {
+  }
+  .hero-left h1 {
+    margin-left: 50px;
+  }
+  .hero-left h3 {
+    margin-left: 50px;
+  }
+  .hero-left p {
   }
 
   .foto1 {
@@ -223,6 +229,8 @@ a:hover {
 .hero-name span {
   color: rgba(213, 166, 65, 0.956);
 }
+.hero-left {
+}
 
 .hero-right {
   display: grid;
@@ -231,7 +239,6 @@ a:hover {
   border-radius: 20px;
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.25);
   margin-right: 100px;
-  /* overflow: hidden; */
 }
 .hero p {
   margin-left: 100px;
