--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -48,7 +49,7 @@ a:hover {
 
 .container {
   width: 1500px;
-  height: 700px;
+  height: 600px;
 }
 
 @media screen and (max-width: 768px) {
@@ -63,14 +64,12 @@ a:hover {
     font-size: 0.9rem;
     line-height: 1.8rem;
   }
+
   .grid-3 {
     font-size: 15px;
     padding: 50px;
   }
-  .hero-right {
-    height: 80%;
-    width: 85%;
-  }
+
   .menu-icon {
     display: none;
   }
@@ -134,46 +133,42 @@ a:hover {
     align-items: center;
   }
   .hero-right {
-    background-color: #000000;
-    width: 250px;
+    background-color: #929191;
+    width: 260px;
     height: auto;
   }
   .hero-right img {
-    /* display: grid;
- justify-content: ; */
-  }
-  .hero-name h1 {
-  }
-  .hero-left h1 {
-    margin-left: 50px;
-  }
-  .hero-left h3 {
-    margin-left: 50px;
-  }
-  .hero-left p {
+    width: 260px;
   }
 
-  .foto1 {
-    height: auto;
-    width: 400px;
+  .hero-left h1 {
+    margin-left: 30px;
   }
-  .foto2 {
-    height: auto;
-    width: 400px;
+  .hero-left h3 {
+    margin-left: 40px;
   }
-  .foto3 {
-    height: auto;
-    width: 400px;
-  }
-  .foto-hobby {
-    height: 150px;
-  }
-  .foto-hobby2 {
-    height: 150px;
-  }
-  .foto-hobby3 {
-    height: 150px;
-  }
+}
+
+.foto1 {
+  height: auto;
+  width: 400px;
+}
+.foto2 {
+  height: auto;
+  width: 400px;
+}
+.foto3 {
+  height: auto;
+  width: 400px;
+}
+.foto-hobby {
+  height: 150px;
+}
+.foto-hobby2 {
+  height: 150px;
+}
+.foto-hobby3 {
+  height: 150px;
 }
 
 /* titles */
@@ -229,8 +224,6 @@ a:hover {
 .hero-name span {
   color: rgba(213, 166, 65, 0.956);
 }
-.hero-left {
-}
 
 .hero-right {
   display: grid;
@@ -240,10 +233,13 @@ a:hover {
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.25);
   margin-right: 100px;
 }
-.hero p {
+.hero-left p {
+  font-size: 12px;
+  font-weight: 700;
+  margin: 0.5rem 0 1rem;
   margin-left: 100px;
-  padding: 0px;
 }
+
 /* services section */
 .services {
   background-color: rgba(63, 78, 78);
@@ -338,6 +334,15 @@ a:hover {
   cursor: pointer;
   margin-left: 20px;
 }
+.foto1 p {
+  font-size: 7px;
+}
+.foto2 p {
+  font-size: 7px;
+}
+.foto3 p {
+  font-size: 7px;
+}
 
 @media screen and (max-width: 768px) {
   .hobby-container {
@@ -422,6 +427,27 @@ button {
   margin-bottom: 10px;
   color: #ffffff;
 }
+.contact-info i {
+  font-size: 30px;
+  color: #25972b;
+  cursor: pointer;
+}
+
+footer {
+  bottom: 0;
+  left: 0;
+  height: 5rem;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+  justify-content: center;
+}
+.copyright {
+  font-size: 300;
+}
+
 @media screen and (max-width: 768px) {
   .contact-container {
     padding: 20px;
